@@ -1,6 +1,8 @@
 ????, 2007 - 4.2:
 
 Fixed bug 1848888 - fixed false positive in UseEqualsToCompareStrings
+Fixed bug 1855409 - False + in EmptyMethodInAbstractClassShouldBeAbstract
+Fixed other false positives in EmptyMethodInAbstractClassShouldBeAbstract
 
 1.7 added as a valid option for targetjdk.
 
